Fixed links problem and removed z-index

--- a/Portfolio-React/src/components/Hero/Hero.module.scss
+++ b/Portfolio-React/src/components/Hero/Hero.module.scss
@@ -18,7 +18,6 @@
 
     @include media-query('md') {
       right: -19rem;
-      z-index: 1;
     }
     @include media-query('lg') {
       grid-column: 2 / -1;
