--- a/Portfolio-React/src/components/Navigation/Navigation.module.scss
+++ b/Portfolio-React/src/components/Navigation/Navigation.module.scss
@@ -79,8 +79,10 @@
 
   &__link {
     color: var(--color-secondary);
-    display: block;
+    height: 100%;
     text-decoration: none;
+    width: 100%;
+    @include flex-center;
 
     &:active {
       color: var(--color-primary);
